--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -108,3 +108,10 @@ title={The V8 JavaScript Engine},
 howpublished={\url{https://nodejs.dev/en/learn/the-v8-javascript-engine/}},
 note={Acessado em: 05 de junho de 2023}
 }
+
+@misc{BASE,
+author={Wang LL and Lo K and Chandrasekhar Y and Reas R and Yang J and Burdick D and Eide D and Funk K and Katsis Y and Kinney R and Li Y and Liu Z and Merrill W and Mooney P and Murdick D and Rishi D and Sheehan J and Shen Z and Stilson B and Wade A and Wang K and Wang NXR and Wilhelm C and Xie B and Raymond D and Weld DS and Etzioni O and Kohlmeier S},
+title={CORD-19: COVID-19 Open Research Dataset},
+howpublished={\url{https://www.kaggle.com/datasets/allen-institute-for-ai/CORD-19-research-challenge?select=metadata.csv}},
+note={Acessado em: 15 de junho de 2023}
+}
