Co-authored-by: Renato Ruppel <HERuppel@users.noreply.github.com>

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -80,6 +80,16 @@ publisher={IEEE},
 journal={IEEE/ACM International Conference on Automated Software Engineering (ASE)}
 }
 
+@Article{WEBUSAGE,
+author={Y. Maleh and Y. Sadqi},
+title={A systematic review and taxonomy of web applications threats},
+year={2022},
+publisher = {Taylor & Francis},
+journal = {Information Security Journal: A Global Perspective},
+volume = {31},
+pages = {1-27}
+}
+
 @Article{ZRHR,
 author={Y. Zhu and D. J. Richins and M. Halpern and V. J. Reddi},
 title={Microarchitectural implications of event-driven server-side web applications},
