--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -60,11 +60,15 @@ the event-driven architecture provides the best solution for developing data-int
 
 \section{Introdução}
 
-O desenvolvimento de aplicações web bem como a migração de aplicações existentes para este ambiente,
-é a realidade atual encontrada no mercado de software. Existem benefícios que justificam esse comportamento,
-como facilidades em instalações e atualizações, alcance global instantâneo e alta portabilidade. Porém,
-sob outra perspectiva, apresentam-se questões críticas que devem ser analisadas antes de aderir à plataforma, como
-o desempenho em situações com alta demanda de dados.
+O desenvolvimento de aplicações \textit{web} bem como a migração de aplicações existentes para este ambiente,
+é a realidade atual encontrada no mercado de \textit{software}. É considerado o meio mais utilizado
+para comunicação e troca de informações atualmente, com mais de 2,5 quintilhões de \textit{bytes} de dados
+carregados por diferentes serviços ofertados. Dentre outras, até janeiro de 2020, foram 
+contabilizados cerca de 4,45 bilhões de usuários de \textit{internet} \cite{WEBUSAGE}. 
+Existem benefícios que justificam esse comportamento, como facilidades em instalações e atualizações, 
+alcance global instantâneo e alta portabilidade. Porém, sob outra perspectiva, apresentam-se questões 
+críticas que devem ser analisadas antes de aderir à plataforma, como o desempenho em situações com 
+alta demanda de dados.
 
 O uso de \textit{Node.JS}, tecnologia em crescente uso e relevância no
 desenvolvimento \textit{web}, justifica-se pelo fato de que esta permite uma abordagem de alta
